--- a/web_app/blueprints/rounds/templates/rounds/show.html
+++ b/web_app/blueprints/rounds/templates/rounds/show.html
@@ -92,7 +92,7 @@
     <div class="row">
         <div class="col">
             <form id='submit-stats-form'
-                action={{ url_for('rounds.submit_stats', game_id = game_id, player=player_variable)}} method="POST">
+                action={{ url_for('rounds.submit_stats', game_id = game_id, player=player_variable) }} method="POST">
                 <div class="form-group">
                     <input type='hidden' id='attack-input' name='attack-input'>
                     <input type='hidden' id='hitpoints-input' name='hitpoints-input'>
@@ -106,9 +106,11 @@
             </form>
         </div>
         <div class="col">
-            <form>
+            <form id='submit-initiative-form' action={{ url_for('rounds.battle', game_id = game_id, player=player_variable) }} method="POST">
                 <div class="form-group">
-                    <button class="btn btn-danger text-light game-btn">
+                    <input type='hidden' id='initiative_input' name='initiative_input'>
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                    <button id='battle-btn' class="btn btn-danger text-light game-btn">
                         ROLL INITIATIVE AND BATTLE
                     </button>
 
@@ -119,7 +121,15 @@
     <div class="row">
         <div class="col">
             <div class="battle-box">
-                SHOW BATTLE HERE
+                {% if player_initiative > 0 %}
+                    {% if opponent_initiative <= 0 %}
+                        Waiting for opponent to begin battle
+                    {% else %}
+                        LET BATTLE BE JOINED
+                    {% endif %}
+                {% else %}
+                    select stat boosters and roll initiative to begin battle
+                {% endif %}
 
             </div>
         </div>
@@ -132,7 +142,7 @@
     const initiative = {{ player_initiative }}
 
     //disable select buttons if stat boosters submitted
-    //and if player_x_initiative == 'pending roll'
+    //and if player_x_initiative not 0
     if (initiative) {
         $('select').prop('disabled', true)
         $('#submit-stats-btn').prop('disabled', true)
@@ -188,6 +198,13 @@
         $("#submit-stats-form").submit()
     })
 
+    //submit initiative roll data to server and calculate battle if opponent ready
+    $('#battle-btn').on('click', (e) => {
+        e.preventDefault()
+        $("#initiative_input").val(dice.roll())
+        $("#submit-initiative-form").submit()
+    })
+
     //dice parameters
     let dice = {
         sides: 6,
@@ -197,6 +214,7 @@
         }
     }
 
+    //submit dice roll data to server
     let diceButtons = document.getElementsByClassName('dice-btn')
 
     for (let i = 0, l = diceButtons.length; i < l; i++) {
