--- a/web_app/blueprints/games/templates/games/new_game_page.html
+++ b/web_app/blueprints/games/templates/games/new_game_page.html
@@ -10,63 +10,67 @@
     </div>
 
     <div style="background-color: black; " class="col-12 col-md-6 row justify-content-center">
-        <form action="{{ url_for('games.create_new_game') }}">
-
+        <form action="{{ url_for('games.create_new_game') }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="input-group">
-                <input type="text" name="habit_1_name" placeholder="Habit 1" class="form-control col-md-8 " >
+                <input type="text" name="habit_1_name" placeholder="Habit 1" class="form-control col-md-8 ">
                 
                 <div class="form-group col-md-5" >
-                    <select id="inputState" class="form-control" >
-                        <option selected disabled >Choose...</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        <option>6</option>
-                        <option>7</option>
-                    </select>
-                </div>
-
-            </div>
-
-            <div class="input-group">
-                <input type="text" name="habit_2_name" placeholder="Habit 2" class="form-control col-md-8 " aria-label="Text input with dropdown button" >
-            
-                <div class="form-group col-md-5" >
-                    <select id="inputState" class="form-control" >
+                    <select id="inputState" name="habit_1_value" class="form-control" >
                         <option selected disabled>Choose...</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        <option>6</option>
-                        <option>7</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
                     </select>
                 </div>
 
             </div>
 
             <div class="input-group">
-                <input type="text" name="habit_3_name" placeholder="Habit 3" class="form-control col-md-8 " aria-label="Text input with dropdown button" >
+                <input type="text" name="habit_2_name" placeholder="Habit 2" class="form-control col-md-8 ">
             
                 <div class="form-group col-md-5" >
-                    <select id="inputState" class="form-control" >
-                        <option selected disabled >Choose...</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        <option>6</option>
-                        <option>7</option>
+                    <select id="inputState" name="habit_2_value" class="form-control" >
+                        <option selected disabled>Choose...</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
                     </select>
                 </div>
 
             </div>
+
+            <div class="input-group">
+                <input type="text" name="habit_3_name" placeholder="Habit 3" class="form-control col-md-8 ">
             
-            <button>Submit</button>
+                <div class="form-group col-md-5" >
+                    <select id="inputState" name="habit_3_value" class="form-control" >
+                        <option selected disabled >Choose...</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                    </select>
+                </div>
+
+            </div>
+
+            <div class="input-group" >
+                <input type="text" name="p2_name" placeholder="Your buddy's username" class="form-control col-md-8 ">
+            </div>
+            
+            <button type="submit" class="btn btn-primary" >Submit</button>
     
         </form>
 
