--- a/web_app/blueprints/games/templates/games/show.html
+++ b/web_app/blueprints/games/templates/games/show.html
@@ -20,8 +20,8 @@ Your proDUCKtive war
             <div class="habit">
                 <p>{{user_habits[i].name}}</p>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="{{rounded_progress[i]}}" aria-valuemin="0"
-                        aria-valuemax="100" style="width: {{rounded_progress[i]}}%">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="{{rounded_progress[i]}}"
+                        aria-valuemin="0" aria-valuemax="100" style="width: {{rounded_progress[i]}}%">
                     </div>
                 </div>
                 <form>
@@ -39,9 +39,10 @@ Your proDUCKtive war
 
         <div class="col-5" id="p1-habits">
             <img class="w-100" src="../../../../static/img/game-duck-1.jpg">
-            <h3>Opponent habits</h3>
+            <h3>{{player_2_username}}'s habits</h3>
+            {% for i in range(0, p2_habit_length)|reverse %}
             <div class="habit">
-                <p>Habit 1</p>
+                <p>{{player2_habits[i].name}}</p>
                 <div class="progress">
                     <div class="progress-bar testbar" role="progressbar" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100" style="width: 25%;">
@@ -50,27 +51,7 @@ Your proDUCKtive war
                 </div>
 
             </div>
-
-            <div class="habit">
-                <p>Habit 2</p>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0"
-                        aria-valuemax="100" style="width: 25%;">
-                        <span class="sr-only">73% Complete</span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="habit">
-                <p>Habit 3</p>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0"
-                        aria-valuemax="100" style="width: 25%;">
-                        <span class="sr-only">73% Complete</span>
-                    </div>
-                </div>
-
-            </div>
+            {% endfor %}
         </div>
     </div>
 
@@ -79,4 +60,3 @@ Your proDUCKtive war
     </div>
 </div>
 {% endblock %}
-
