--- a/web_app/blueprints/games/templates/games/show.html
+++ b/web_app/blueprints/games/templates/games/show.html
@@ -44,8 +44,8 @@ Your proDUCKtive war
             <div class="habit">
                 <p>{{player2_habits[i].name}}</p>
                 <div class="progress">
-                    <div class="progress-bar testbar" role="progressbar" aria-valuenow="25" aria-valuemin="0"
-                        aria-valuemax="100" style="width: 25%;">
+                    <div class="progress-bar testbar" role="progressbar" aria-valuenow="{{rounded_p2_progress}}" aria-valuemin="0"
+                        aria-valuemax="100" style="width: {{rounded_p2_progress[i]}}%">
                         <span class="sr-only">73% Complete</span>
                     </div>
                 </div>
