--- a/web_app/blueprints/games/templates/games/new_game_page.html
+++ b/web_app/blueprints/games/templates/games/new_game_page.html
@@ -5,7 +5,7 @@
 <div class="row no-gutters" style="height: 100vh" >
     <div style="background-color: blue" class="col-12 col-md-6">
         <h1>Player 1</h1>
-        <img src="" alt="User Profile Img">
+        <img src="../../../../static/img/No-profile.jpg" alt="User Profile Img">
 
     </div>
 
@@ -17,7 +17,7 @@
                 
                 <div class="form-group col-md-5" >
                     <select id="inputState" name="habit_1_value" class="form-control" >
-                        <option selected disabled>Choose...</option>
+                        <option value='0' selected disabled>Choose...</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -35,7 +35,7 @@
             
                 <div class="form-group col-md-5" >
                     <select id="inputState" name="habit_2_value" class="form-control" >
-                        <option selected disabled>Choose...</option>
+                        <option value='0' selected disabled>Choose...</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -53,7 +53,7 @@
             
                 <div class="form-group col-md-5" >
                     <select id="inputState" name="habit_3_value" class="form-control" >
-                        <option selected disabled >Choose...</option>
+                        <option value='0' selected disabled >Choose...</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
