--- a/web_app/blueprints/users/templates/users/user_profile_page.html
+++ b/web_app/blueprints/users/templates/users/user_profile_page.html
@@ -5,7 +5,7 @@
 <div class="row no-gutters" style="height: 100vh" >
     <div style="background-color: blue" class="col-12 col-md-6">
         <h1>Username</h1>
-        <img src="" alt="User Profile Picture">
+        <img class="w-100" src="../../../../static/img/No-profile.jpg" alt="User Profile Picture">
     </div>
 
     <div style="background-color: black; text-align: center;" class="col-12 col-md-6 justify-content-center">
