--- a/web_app/templates/_layout.html
+++ b/web_app/templates/_layout.html
@@ -19,6 +19,14 @@
   </head>
 
     <body>
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+            {{ message }}
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+
       {% block content %}
       {% endblock %}
 
